fixed strange spacing on narrow screens

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -134,6 +134,7 @@ section p{
 img{
     height: calc(100% - calc(var(--borderSize) * 2));
     width: calc(100% - calc(var(--borderSize) * 2));
+    max-width: calc(100% - calc(var(--borderSize) * 2));
     object-fit: cover;
     border: var(--lightColor) solid var(--borderSize);
     margin: 10px 0 0 0;
@@ -258,7 +259,6 @@ footer{
 
     .project-caption div{
         bottom: 9px;
-        width: 100%;
     }
 
     #first-image div{
@@ -271,6 +271,10 @@ footer{
 
     #contact section{
         margin: 3% auto 0 auto;
+    }
+
+    span{
+        margin: 0 5%;
     }
 }
 
